Set background color on modal header and modal body instead on modalElement to prevent visible white edges when backdrop is darker

--- a/src/components/shared/modal/Modal.module.css
+++ b/src/components/shared/modal/Modal.module.css
@@ -11,7 +11,6 @@
 
 .modalElement {
   width: min(calc(100% - 2rem), 500px);
-  background-color: var(--color-surface-elevated-2);
   border-radius: 2px;
 }
 
