--- a/src/components/shared/modal/components/modal-footer/ModalFooter.module.css
+++ b/src/components/shared/modal/components/modal-footer/ModalFooter.module.css
@@ -4,7 +4,7 @@
   justify-content: flex-end;
   gap: 0.5rem;
   padding: 0.75rem;
-  background-color: var(--color-surface-elevated-0);
+  background-color: var(--color-surface-elevated-2);
   border-bottom-right-radius: 2px;
   border-bottom-left-radius: 2px;
 }
